# phone-server

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/control-api/: README.md  pyproject.toml
apps/control-api/src/control_api/: __init__.py  main.py
apps/control-api/src/control_api/api/: dependencies.py  error_handlers.py
apps/control-api/src/control_api/api/v1/: automation_tasks.py  device_agents.py  devices.py  health.py  router.py
apps/control-api/src/control_api/core/: config.py  time.py
apps/control-api/src/control_api/infrastructure/persistence/memory/: repository.py
apps/control-api/src/control_api/modules/automation_tasks/: models.py  service.py  state_machine.py
apps/control-api/src/control_api/modules/device_agents/: models.py  readiness.py  service.py
apps/control-api/src/control_api/modules/devices/: models.py  service.py
apps/control-api/src/control_api/shared/: errors.py
apps/control-api/tests/: conftest.py
apps/control-api/tests/integration/: test_agent_task_flow.py
apps/control-api/tests/unit/: test_state_machine.py
apps/dashboard/: README.md  index.html  package.json  tsconfig.json
apps/device-agent/: README.md  pyproject.toml
apps/device-agent/src/device_agent/: __init__.py  main.py
apps/device-agent/src/device_agent/capabilities/: detector.py
apps/device-agent/src/device_agent/client/: control_api_client.py  errors.py  retry.py
apps/device-agent/src/device_agent/core/: config.py  identity.py  lifecycle.py
apps/device-agent/src/device_agent/devices/: discovery.py
apps/device-agent/src/device_agent/executors/: automation_placeholder.py  base.py
apps/device-agent/src/device_agent/reporting/: log_buffer.py
apps/device-agent/src/device_agent/storage/: database.py
apps/device-agent/src/device_agent/tasks/: context.py  registry.py  runner.py
apps/device-agent/tests/integration/: test_client_runner.py
apps/device-agent/tests/unit/: test_executor.py  test_identity_and_capabilities.py  test_log_buffer.py
contracts/json-schema/: README.md
contracts/openapi/: README.md
docs/agent/: README.md
docs/api/: README.md  device-agent-protocol.md
docs/architecture/: control-plane.md  device-agent.md  overview.md
docs/deployment/: README.md
docs/development/: commands.md  getting-started.md  running-device-agent.md
docs/security/: principles.md
infra/compose/: README.md
infra/database/: README.md
infra/deployment/: README.md
infra/docker/: README.md
infra/monitoring/: README.md
python-packages/contracts/: pyproject.toml
python-packages/contracts/src/contracts/: __init__.py  agents.py  capabilities.py  common.py  devices.py  events.py  health.py  tasks.py
python-packages/contracts/tests/: test_health.py
python-packages/observability/: pyproject.toml
python-packages/observability/src/observability/: __init__.py
python-packages/observability/tests/: test_logging.py
(+111 files in other folders)
