[project]
name = "control-api"
version = "0.1.0"
description = "FastAPI Control API for agent registry and automation task orchestration"
requires-python = ">=3.12,<3.14"
dependencies = [
  "android-linux-contracts",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
control-api = "control_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_api"]

[tool.uv.sources]
android-linux-contracts = { workspace = true }

[dependency-groups]
dev = ["httpx>=0.28,<1"]
