[project]
name = "device-agent"
version = "0.1.0"
description = "Outbound Python worker for Android automation devices"
requires-python = ">=3.12,<3.14"
dependencies = [
  "android-linux-common",
  "android-linux-contracts",
  "httpx>=0.28,<1",
]

[project.scripts]
device-agent = "device_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/device_agent"]

[tool.uv.sources]
android-linux-common = { workspace = true }
android-linux-contracts = { workspace = true }
