[project]
name = "android-linux-contracts"
version = "0.1.0"
description = "Shared Python contract models"
requires-python = ">=3.12,<3.14"
dependencies = ["pydantic>=2.11,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contracts"]
