[project]
name = "android-linux-observability"
version = "0.1.0"
description = "Shared standard-library logging helpers"
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
